--- a/colorGame.html
+++ b/colorGame.html
@@ -18,8 +18,8 @@
     <div id="stripe">
         <button id="reset">New colors</button>
         <span id="message">Pick a color.</span>
-        <button id="easyBtn">Easy</button>
-        <button id="hardBtn" class="selected">Hard</button>
+        <button class="modes selected">Easy</button>
+        <button class="modes">Hard</button>
     </div>
 
     <div id="container">
